modules/gdscript/tests/scripts/analyzer/errors/not_found_member.gd
func test():
	TileSet.this_does_not_exist # Does not exist
